Carpeta APIS con el documento completo de la API Rick And Morty

--- a/Formulario chile limpio/formularioCHL.html
+++ b/Formulario chile limpio/formularioCHL.html
@@ -47,7 +47,7 @@
             <br>
             <br>
             <label for="Email">Correo Electronico:</label>
-            <input type="text" id="Email" name="xemail">
+            <input type="email" id="Email" name="xemail">
             <br>
             <br>
             <label for="numCel">Celular:</label>
